# defmt2log

./: Cargo.toml  README.md
src/: lib.rs  logger.rs  table.rs
tests/: smoke.rs
